--- a/vaccination_predcitor.ipynb
+++ b/vaccination_predcitor.ipynb
@@ -25,9 +25,9 @@
    "outputs": [],
    "source": [
     "# Load datasets\n",
-    "train_features = pd.read_csv('training_set_features.csv')\n",
-    "train_labels = pd.read_csv('training_set_labels.csv')\n",
-    "test_features = pd.read_csv('test_set_features.csv')"
+    "train_features = pd.read_csv('dataset/training_set_features.csv')\n",
+    "train_labels = pd.read_csv('dataset/training_set_labels.csv')\n",
+    "test_features = pd.read_csv('dataset/test_set_features.csv')"
    ]
   },
   {
